# broccoli-rs

server/: Cargo.toml  compose.yml
server/bin-shuttle/: Cargo.toml
server/engine/: .env  Cargo.toml  diesel.toml
server/engine/migrations/: 0001_init.sql
server/engine/migrations/2024-08-12-132524_create_vertex/: down.sql  up.sql
server/engine/migrations/2024-08-12-132636_create_edge/: down.sql  up.sql
server/engine/src/: api.rs  constant.rs  dto.rs  error.rs  lib.rs  model.rs  pattern.rs  schema.rs  types.rs
