[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
once_cell = "1.19.0"
thiserror = "1.0.63"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.39.2", features = ["full"] }
diesel = { version = "2.2.2", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
diesel-async = { version = "0.5.0", features = ["postgres"] }

[features]
default = []
